<resources>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_glide_photo_manager_contact_photo_description">Quick contact for ^1</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="a11y_new_call_log_entry_full_description_with_phone_account_info">^1, ^2, ^3.</string>
    <string name="a11y_new_call_log_entry_full_description_without_phone_account_info">^1, ^2.</string>
    <string name="a11y_new_call_log_entry_phone_account">on ^1, via ^2</string>
    <string name="a11y_new_call_log_entry_tap_action">expand menu</string>
    <string name="a11y_new_call_log_entry_video_call">make a video call to ^1</string>
    <string name="a11y_new_call_log_entry_voice_call">call ^1</string>
    <string name="a11y_voicemail_entry_call">Call number</string>
    <string name="a11y_voicemail_entry_delete">Delete</string>
    <string name="a11y_voicemail_entry_expand_menu">Expand menu for this voicemail entry</string>
    <string name="antispam_classify">Call intercept classify</string>
    <string name="antispam_classify_bilk_call">Bilk call interception</string>
    <string name="antispam_classify_call">Harassing call interception</string>
    <string name="antispam_classify_insurance">Insurance interception</string>
    <string name="antispam_classify_real_estate_agency">Real estate agency interception</string>
    <string name="antispam_classify_sell">Sales call interception</string>
    <string name="assisted_dialing_setting_cc_category_title">Home country</string>
    <string name="assisted_dialing_setting_cc_default_summary_fallback">Automatically detected</string>
    <string name="assisted_dialing_setting_cc_key">assisted_dialing_setting_cc_key</string>
    <string name="assisted_dialing_setting_cc_title">Default home country</string>
    <string name="assisted_dialing_setting_summary">Predict and add a country code when you call while traveling abroad</string>
    <string name="assisted_dialing_setting_title">Assisted dialing</string>
    <string name="assisted_dialing_setting_toggle_key">assisted_dialing_setting_toggle_key</string>
    <string name="audioroute_bluetooth">Bluetooth</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="audioroute_speaker">Speaker</string>
    <string name="auto_record_all">All numbers</string>
    <string name="auto_recording">Auto recording</string>
    <string name="autodownload_summary">Automatically download content over cellular network</string>
    <string name="block_number_header">blacklist</string>
    <string name="call_details_copy_number">Copy number</string>
    <string name="call_details_edit_number">Edit number before call</string>
    <string name="call_setting_call_recoder_notify_title">Call recording notification</string>
    <string name="call_setting_mark_unkown_number_summary">Number Identification Service is powered by TeddyMobile</string>
    <string name="call_setting_mark_unkown_number_title">Smart unknown number identification</string>
    <string name="contact_menu_contact_info">Contact info</string>
    <string name="contact_menu_message">Message</string>
    <string name="contact_menu_remove">Remove</string>
    <string name="contact_menu_video_call">Video Call</string>
    <string name="contact_menu_voice_call">Voice Call</string>
    <string name="conversation_history_button_add_contact">Add contact</string>
    <string name="conversation_history_button_block">Block</string>
    <string name="conversation_history_button_unblock">Unblock</string>
    <string name="conversation_history_call_details_delete_history">Delete history</string>
    <string name="dialer_theme_dialog_title">Choose theme</string>
    <string name="dialer_theme_summary">Choose a theme for Dialer</string>
    <string name="dialer_theme_system_default_value">theme_system_default</string>
    <string name="dialer_theme_title">Theme</string>
    <string name="display_options_dialer_theme_preference">android.dialer.ui.theme.DIALER_THEME</string>
    <string name="display_options_sort_by_given_name_value">sort_by_given_name</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_sort_list_by_key">android.contacts.SORT_ORDER</string>
    <string name="display_options_view_given_name_first_value">view_given_name_first</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="display_options_view_names_as_key">android.contacts.DISPLAY_ORDER</string>
    <string name="donation_learn_more_url">https://support.google.com/phoneapp/answer/2811844#voicemail_transcript</string>
    <string name="dtmf_tone_enable_title">Keypad tones</string>
    <string name="dtmf_tone_length_preference_key">button_dtmf_settings</string>
    <string name="dtmf_tone_length_title">Keypad tone length</string>
    <string name="home_popu_mark">Mark as</string>
    <string name="incall_content_description_earpiece">Handset earpiece</string>
    <string name="incall_content_description_muted">Muted</string>
    <string name="incall_content_description_speaker">Speaker</string>
    <string name="incall_content_description_unmuted">Unmuted</string>
    <string name="incall_label_add_call">Add call</string>
    <string name="incall_label_dialpad">Keypad</string>
    <string name="incall_label_hold">Hold</string>
    <string name="incall_label_merge_calls">Merge calls</string>
    <string name="incall_label_mute">Mute</string>
    <string name="incall_label_record_call">Record</string>
    <string name="incall_label_speaker">Speaker</string>
    <string name="incall_label_swap">Swap</string>
    <string name="incall_label_videocall">Video call</string>
    <string name="main_menu_call_history">Call history</string>
    <string name="main_menu_clear_frequents">Clear frequents</string>
    <string name="manage_blocked_numbers_label">Blocked numbers</string>
    <string name="nui_simulator_submenu_label">Simulator</string>
    <string name="onekey_dial_title">Speed Dial</string>
    <string name="play_dtmf_preference_key">button_play_dtmf_tone</string>
    <string name="prc_auto_answer_delay_auto_answer">Delay auto answer</string>
    <string name="prc_auto_answer_voice_mail_duration">Voicemail duration</string>
    <string name="prc_auto_answer_voice_mail_greeting">Voicemail greeting</string>
    <string name="prc_auto_answer_when_to_turn_on">When to turn on</string>
    <string name="prc_auto_answer_who_can_leave_voice_mail">Who can leave a voicemail</string>
    <string name="prc_voicemail_setting_single_tips">"Before using, please confirm with the operator that voicemail has been turned off. For step %1$s, make sure that \"always transfer\" and \"transfer when no one answers\" at the SIM card have been disabled. 
 
In order to use the voicemail function properly, stable signal is required for your mobile phone communication."</string>
    <string name="pref_tmo_vvm_tutorial_key">tmo_vvm_tutorial_key</string>
    <string name="pref_tmo_vvm_tutorial_title">Tutorial</string>
    <string name="recorded_calls">Recorded calls</string>
    <string name="recording_off">Off</string>
    <string name="recording_select">Selected (%1$s numbers)</string>
    <string name="ringtone_preference_key">button_ringtone_key</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="rtt_button_back">Back</string>
    <string name="rtt_menu_option_title">Switch to RTT</string>
    <string name="settings">Settings</string>
    <string name="speed_dial_key_2">Key 2</string>
    <string name="speed_dial_key_3">Key 3</string>
    <string name="speed_dial_key_4">Key 4</string>
    <string name="speed_dial_key_5">Key 5</string>
    <string name="speed_dial_key_6">Key 6</string>
    <string name="speed_dial_key_7">Key 7</string>
    <string name="speed_dial_key_8">Key 8</string>
    <string name="speed_dial_key_9">Key 9</string>
    <string name="tmo_vvm_test_config_key">tmo_vvm_test_config</string>
    <string name="tmo_vvm_test_config_summary">Click to launch VVM Test config options</string>
    <string name="tmo_vvm_test_config_title">VVM Test configuration</string>
    <string name="transcription_learn_more_url">https://support.google.com/phoneapp/answer/2811844?hl=en%26ref_topic=7539039</string>
    <string name="vibrate_on_preference_key">button_vibrate_on_ring</string>
    <string name="vibrate_on_ring_title">Also vibrate for calls</string>
    <string name="voicemail_advanced_settings_key">voicemail_advanced_settings_key</string>
    <string name="voicemail_advanced_settings_title">Advanced Settings</string>
    <string name="voicemail_autodownload_key">voicemail_autodownload_key</string>
    <string name="voicemail_autodownload_title">Auto download</string>
    <string name="voicemail_change_greeting_key">voicemail_change_greeting_key</string>
    <string name="voicemail_change_greeting_preference_title">Voicemail greeting</string>
    <string name="voicemail_change_pin_key">voicemail_change_pin_key</string>
    <string name="voicemail_change_pin_preference_title">Change PIN</string>
    <string name="voicemail_changepin_key">voicemail_changepin_key</string>
    <string name="voicemail_changepin_title">Change PIN</string>
    <string name="voicemail_notifications_key">voicemail_notification_key</string>
    <string name="voicemail_notifications_preference_title">Notifications</string>
    <string name="voicemail_refresh_menu">Refresh voicemail</string>
    <string name="voicemail_select">Select</string>
    <string name="voicemail_select_all">Select all</string>
    <string name="voicemail_settings_title">Voicemail</string>
    <string name="voicemail_tmo_greetings_key">voicemail_tmo_greetings_key</string>
    <string name="voicemail_tmo_greetings_title">Voicemail greeting</string>
    <string name="voicemail_transcription_key">voicemail_transcription_key</string>
    <string name="voicemail_transcription_title">Voicemail transcription</string>
    <string name="voicemail_visual_voicemail_archive_key">archive_is_enabled</string>
    <string name="voicemail_visual_voicemail_auto_archive_switch_title">Extra backup and storage</string>
    <string name="voicemail_visual_voicemail_donation_key">donate_voicemails</string>
    <string name="voicemail_visual_voicemail_donation_switch_title">Voicemail transcription analysis</string>
    <string name="voicemail_visual_voicemail_key">voicemail_visual_voicemail_key</string>
    <string name="voicemail_visual_voicemail_switch_title">Visual voicemail</string>
    <string name="voicemail_visual_voicemail_transcription_key">transcribe_voicemails</string>
    <string name="voicemail_visual_voicemail_transcription_switch_title">Voicemail transcription</string>
</resources>