<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/quantum_ic_person_add_vd_theme_24" android:id="@id/conversation_history_add_contact" android:title="@string/conversation_history_button_add_contact" app:showAsAction="always" />
    <item android:id="@id/conversation_history_copy_number" android:title="@string/call_details_copy_number" app:showAsAction="never" />
    <item android:id="@id/conversation_history_edit_number" android:title="@string/call_details_edit_number" app:showAsAction="never" />
    <item android:id="@id/conversation_history_mark" android:title="@string/home_popu_mark" app:showAsAction="never" />
    <item android:id="@id/conversation_history_block" android:title="@string/conversation_history_button_block" app:showAsAction="never" />
    <item android:id="@id/conversation_history_unblock" android:title="@string/conversation_history_button_unblock" app:showAsAction="never" />
    <item android:id="@id/conversation_history_delete_history" android:title="@string/conversation_history_call_details_delete_history" app:showAsAction="never" />
</menu>