<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/incall_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/incall_window_margin_horizontal" android:layout_marginEnd="@dimen/incall_window_margin_horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <GridLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/button_grid_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/incall_buttom_grid_margin" android:columnCount="@integer/incall_button_number_per_row">
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@id/incall_first_button" android:layout_width="0.0dip" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_mute" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@id/incall_second_button" android:layout_width="0.0dip" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_dialpad" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:enabled="false" android:gravity="center" android:id="@id/incall_third_button" android:layout_width="0.0dip" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_speaker" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@id/incall_fourth_button" android:layout_width="0.0dip" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_add_call" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@id/incall_fifth_button" android:layout_width="0.0dip" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_hold" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@id/incall_sixth_button" android:layout_width="0.0dip" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_videocall" />
        <com.android.incallui.incall.impl.CheckableLabeledButton android:gravity="center" android:id="@id/incall_seventh_button" android:layout_width="0.0dip" android:layout_marginTop="@dimen/incall_button_vertical_padding" android:layout_columnWeight="1.0" app:incall_labelText="@string/incall_label_record_call" />
    </GridLayout>
</FrameLayout>