<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="180.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_upgrade_rtt" android:text="@string/rtt_menu_option_title" android:drawableStart="@drawable/quantum_ic_rtt_vd_theme_24" style="@style/RttButton" />
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_add_call" android:visibility="gone" android:text="@string/incall_label_add_call" android:drawableStart="@drawable/quantum_ic_add_call_vd_theme_24" style="@style/RttButton" />
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_merge_calls" android:visibility="gone" android:text="@string/incall_label_merge_calls" android:drawableStart="@drawable/ic_rtt_menu_merge" style="@style/RttButton" />
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_upgrade_to_video" android:visibility="gone" android:text="@string/incall_label_videocall" android:drawableStart="@drawable/quantum_ic_videocam_vd_theme_24" style="@style/RttButton" />
</LinearLayout>